# mcvd_moving_mnist

./: .gitignore  README.md  config.py  debug_step0.py  export_onnx.py  export_torchinfo.py  main.py  model_summary.txt  pyproject.toml  requirements.txt  scripts.sh  test.py  test_sampler.py  train.py  vis_trainlog.py  visual_traincsv_2.py
datasets/: moving_mnist.py
losses/: dsm.py
model/: __init__.py  unet.py
