[project]
name = "video-diff-worldmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.15.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.7",
    "ninja>=1.13.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "progressbar>=2.5",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
